Update Search Friend Online

--- a/src/main/webapp/static/css/style.css
+++ b/src/main/webapp/static/css/style.css
@@ -172,6 +172,7 @@ img {
     margin-top: 2rem;
     overflow-y: auto;
     max-height: 50rem;
+    list-style: none;
 }
 
 .list-user-search .txt-input {
