--- a/src/main/webapp/static/css/style.css
+++ b/src/main/webapp/static/css/style.css
@@ -463,6 +463,7 @@ img {
     font-weight: 500;
     max-width: 20rem;
     margin-right: .5rem;
+    word-break: break-word;
 }
 
 .message-text>* {
